--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Dogeparty Address/Key Regeneration Tool</title>
+    <title>CLEARWALLET Address/Key Regeneration Tool</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
     <script src="jss/mnemonic.js"></script>
@@ -21,14 +21,14 @@
         <div class="row">
             <br />
             <div class="col-sm-7">
-                <h4 style="margin-left:0px">
-                    Dogeparty Address/Keys Generation Tool
+                <h3 style="margin-left:0px">
+                    Viacoin (Clearwallet) Address/Keys Generation Tool
                     <br /><small>Using Your 12 Words Passphrase</small>
-                </h4>
+                </h3>
             </div>
             <div class="col-sm-5">
                 <div class=" pull-right" style="text-align: right">
-                    <img id="Img1" src="images/logo.png" alt="Logo" style="margin-top: -0px;  margin-top: 5px" width="100" />
+                    
                 </div>
             </div>
         </div>
@@ -44,7 +44,7 @@
                 <div class="form-group">
                     <label for="input1" class="col-sm-2 control-label">Passphrase</label>
                     <div class="col-sm-10">
-                        <input class="form-control" id="input1" placeholder=" Enter your 12 word counterwallet passphrase" style="width: 100%;" title=" Enter your 12 word counterwallet passphrase here" >
+                        <input class="form-control" id="input1" placeholder=" Enter your 12 word clearwallet passphrase" style="width: 100%;" title=" Enter your 12 word clearwallet passphrase here" >
                     </div>
                 </div>
                 <div class="form-group">
@@ -231,7 +231,7 @@
                             cell1.className = "active"
                             if (blnshowaddress == true) {
                                 cell1.innerHTML = "<img src='images/qrcode2.png' class='menu_links' data-toggle='modal' data-target='.bs-example-modal-sm' data-whatever='" + address1.toString() + "'> " +
-                                                  "<a href='https://chain.so/address/DOGE/" + address1.toString() + "' target='_blank'><small>" + address1.toString() + "</small></a>";
+                                                  "<a href='https://chainz.cryptoid.info/via/address.dws?" + address1.toString() + "' target='_blank'><small>" + address1.toString() + "</small></a>";
                             } else { cell1.innerHTML = "..."; }
                             var cell2 = row.insertCell(2);
                             cell2.className = "warning"
@@ -282,7 +282,7 @@
                 var button = $(event.relatedTarget)
                 var recipient = button.data('whatever')
                 var modal = $(this)
-                modal.find('.modal-title').text("QRcode for DOGE Address " + recipient + "")
+                modal.find('.modal-title').text("QRcode for VIA Address " + recipient + "")
                 makecode(recipient);
             })
 
@@ -305,7 +305,10 @@
     <hr style="width: 830px; margin-left: auto; margin-right: auto;" />
     <footer class="footer">
         <div class="container">
-            <p align="center">Forked and updated for Dogeparty by langerhans | <a href="https://github.com/langerhans/cw_address_key_generator" target="_blank">Dogeparty version GitHub repository</a> <br>Original work Copyright (c) 2015 <a href="https://blockscan.com">blockscan.com</a> | No warranty provided | <a href="https://github.com/blockscan/cw_address_key_generator" target="_blank">GitHub Repository</a></p>
+            <p align="center">Donations:</p>
+            <p align="center">VIA:  VenA2k4YSrW63Diyt9NaLLNv5vbkgkfsSp</p>
+            <p align="center">BTC:  13Pc1fodMxkUob2j2xvX8Srt2sEgJBvfCz</p>
+            <p align="center">ETH:  0x525bad50ae642a60a0fbf4a2ea7951781cadd487</p>
         </div>
     </footer>
 
