--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="container" style="width: 830px; margin-left: auto; margin-right: auto;">
         <div class="row">
             <br />
-            <div class="col-sm-7">
+            <div >
                 <h4 style="margin-left:0px">
                     Viacoin (Clearwallet) Address/Keys Generation Tool
                     <br /><small>Using Your 12 Words Passphrase</small>
