--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="row">
             <br />
             <div >
-                <h3 style="margin-left:0px">
+                <h2 style="margin-left:0px">
                     Viacoin (Clearwallet) Address/Keys Generation Tool
                     <br /><small>Using Your 12 Words Passphrase</small>
-                </h3>
+                </h2>
             </div>
         </div>
 
@@ -300,7 +300,7 @@
     <hr style="width: 830px; margin-left: auto; margin-right: auto;" />
     <footer class="footer">
         <div class="container">
-            <p align="center"><B>Donations:</B></p>
+            <p align="center"><h3>Donations:</h3></p>
             <p align="center">VIA:  VenA2k4YSrW63Diyt9NaLLNv5vbkgkfsSp</p>
             <p align="center">BTC:  13Pc1fodMxkUob2j2xvX8Srt2sEgJBvfCz</p>
             <p align="center">ETH:  0x525bad50ae642a60a0fbf4a2ea7951781cadd487</p>
