--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
     <hr style="width: 830px; margin-left: auto; margin-right: auto;" />
     <footer class="footer">
         <div class="container">
-            <p align="center"><h3>Donations:</h3></p>
-            <p align="center">VIA:  VenA2k4YSrW63Diyt9NaLLNv5vbkgkfsSp</p>
-            <p align="center">BTC:  13Pc1fodMxkUob2j2xvX8Srt2sEgJBvfCz</p>
-            <p align="center">ETH:  0x525bad50ae642a60a0fbf4a2ea7951781cadd487</p>
+            <p align="center"><b>Donations:</b></p>
+            <p align="center"><b>VIA:</b>  VenA2k4YSrW63Diyt9NaLLNv5vbkgkfsSp</p>
+            <p align="center"><b>BTC:</b>  13Pc1fodMxkUob2j2xvX8Srt2sEgJBvfCz</p>
+            <p align="center"><b>ETH:</b>  0x525bad50ae642a60a0fbf4a2ea7951781cadd487</p>
         </div>
     </footer>
 
